Home Page Exercise API integrated

--- a/Design/pages/Home.html
+++ b/Design/pages/Home.html
@@ -8,7 +8,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
 
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
+        integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
 
     <script src="https://kit.fontawesome.com/87ad30c39c.js"></script>
 
@@ -29,9 +30,10 @@
         <nav class="navbar navbar-expand-lg navbar-light bg-light">
             <div class="container">
                 <span class="navbar-brand mb-0 h1"><span id="logo-u"><b>U</b></span>fit.</span>
-                <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarText" aria-controls="navbarText" aria-expanded="false" aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
-            </button>
+                <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarText"
+                    aria-controls="navbarText" aria-expanded="false" aria-label="Toggle navigation">
+                    <span class="navbar-toggler-icon"></span>
+                </button>
 
                 <div class="collapse navbar-collapse" id="navbarText">
 
@@ -72,7 +74,8 @@
 
                             <div class="nav-item dropdown">
 
-                                <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                                <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" role="button"
+                                    data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
 
                                     <b>Atif Mehmood</b>
 
@@ -195,7 +198,8 @@
                                     </tr>
                                 </tbody>
                             </table>
-                            <button type="button" class="btn btn-sm btnn-primary text-white" data-toggle="modal" data-target="#addFoodModal" value="LOG FOOD" button-position="center">Log Food</button>
+                            <button type="button" class="btn btn-sm btnn-primary text-white" data-toggle="modal"
+                                data-target="#addFoodModal" value="LOG FOOD" button-position="center">Log Food</button>
                         </div>
                     </div>
                     <div class="col-md-6 pt-2">
@@ -214,7 +218,7 @@
                                         <th>Delete</th>
                                     </tr>
                                 </thead>
-                                <tbody>
+                                <tbody id='exercise-log-body'>
                                     <tr scope="row">
                                         <td>push-ups</td>
                                         <td>15</td>
@@ -267,7 +271,8 @@
                                 </tbody>
                             </table>
                             <div class="d-flex flex-row-reverse">
-                                <button class="btn btnn-primary btn-sm btn-block text-white" value="LOG FOOD" data-toggle="modal" data-target="#log-exercise">Log Exercise</button>
+                                <button class="btn btnn-primary btn-sm btn-block text-white" value="LOG FOOD"
+                                    data-toggle="modal" data-target="#log-exercise">Log Exercise</button>
 
                             </div>
                         </div>
@@ -305,7 +310,7 @@
 
                             <a href="./Landing.html" class="text-white ml-3">
 
-                            Logout</a>
+                                Logout</a>
 
                         </div>
 
@@ -341,15 +346,16 @@
         <!--Footer end-->
 
         <!--Log Exercise Modal start-->
-        <div class="modal fade" id="log-exercise" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+        <div class="modal fade" id="log-exercise" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel"
+            aria-hidden="true">
             <div class="modal-dialog" role="document">
                 <div class="modal-content container-fluid">
                     <!--Header-->
                     <div class="modal-header">
                         <h4 class="modal-title " id="myModalLabel ">Add Exercise</h4>
                         <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-                        <span aria-hidden="true">×</span>
-                    </button>
+                            <span aria-hidden="true">×</span>
+                        </button>
                     </div>
                     <!--button group-->
                     <div class="col-md-12 text-center">
@@ -363,8 +369,8 @@
                         <input type="search" class="form-control" placeholder="Search Exercise">
                         <div class="input-group-append">
                             <button class="btn btnn-primary " type="button">
-                            <i class="fa fa-search"></i>
-                        </button>
+                                <i class="fa fa-search"></i>
+                            </button>
                         </div>
                     </div>
                     <!--body-->
@@ -384,7 +390,8 @@
                                     <td>
                                         <form>
                                             <div class="form-row col-xs-1">
-                                                <input class="form-control" type="number" placeholder="Duration" aria-label="Time">
+                                                <input class="form-control" type="number" placeholder="Duration"
+                                                    aria-label="Time">
                                             </div>
                                         </form>
                                     </td>
@@ -396,7 +403,8 @@
                                     <td>
                                         <form>
                                             <div class="form-row col-xs-2">
-                                                <input class="form-control" type="number" placeholder="Duration" aria-label="Time">
+                                                <input class="form-control" type="number" placeholder="Duration"
+                                                    aria-label="Time">
                                             </div>
                                         </form>
                                     </td>
@@ -408,7 +416,8 @@
                                     <td>
                                         <form>
                                             <div class="form-row col-xs-2">
-                                                <input class="form-control" type="number" placeholder="Duration" aria-label="fa-times">
+                                                <input class="form-control" type="number" placeholder="Duration"
+                                                    aria-label="fa-times">
                                             </div>
                                         </form>
                                     </td>
@@ -420,7 +429,8 @@
                                     <td>
                                         <form>
                                             <div class="form-row col-xs-2">
-                                                <input class="form-control" type="number" placeholder="Duration" aria-label="Time">
+                                                <input class="form-control" type="number" placeholder="Duration"
+                                                    aria-label="Time">
                                             </div>
                                         </form>
                                     </td>
@@ -448,15 +458,16 @@
         <!--Log Exercise Modal end-->
 
         <!-- Modal: Add Food -->
-        <div class="modal fade" id="addFoodModal" tabindex="-1" role="dialog" aria-labelledby="addFoodModal" aria-hidden="true">
+        <div class="modal fade" id="addFoodModal" tabindex="-1" role="dialog" aria-labelledby="addFoodModal"
+            aria-hidden="true">
             <div class="modal-dialog" role="document">
                 <div class="modal-content">
                     <!--Header-->
                     <div class="modal-header">
                         <h4 class="modal-title">Add Food</h4>
                         <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-                        <span aria-hidden="true">×</span>
-                    </button>
+                            <span aria-hidden="true">×</span>
+                        </button>
                     </div>
 
                     <!--button group-->
@@ -464,22 +475,25 @@
 
                         <div class=" pt-2" role="group">
                             <label class="m-1">
-                            <input type="radio" name="mealType" value="breakfast" checked>
-                            Breakfast
-                        </label>
+                                <input type="radio" name="mealType" value="breakfast" checked>
+                                Breakfast
+                            </label>
                             <label class="m-1">
-                            <input type="radio" name="mealType" value="lunch">
-                            Lunch
-                        </label>
+                                <input type="radio" name="mealType" value="lunch">
+                                Lunch
+                            </label>
                             <label class="m1">
-                            <input type="radio" name="mealType" value="dinner">
-                            Dinner
-                        </label>
+                                <input type="radio" name="mealType" value="dinner">
+                                Dinner
+                            </label>
 
                         </div>
                         <div class="dropdown search">
-                            <input type="search" id="searchBar" placeholder="search food" class="form-control dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                            <div class="dropdown-menu" id="search-dropdown-menu" aria-labelledby="searchBar" style="max-height: 400px;overflow-y: scroll;width:100%">
+                            <input type="search" id="searchBar" placeholder="search food"
+                                class="form-control dropdown-toggle" data-toggle="dropdown" aria-haspopup="true"
+                                aria-expanded="false">
+                            <div class="dropdown-menu" id="search-dropdown-menu" aria-labelledby="searchBar"
+                                style="max-height: 400px;overflow-y: scroll;width:100%">
 
                             </div>
                         </div>
@@ -487,7 +501,8 @@
 
                     <div class="modal-body">
 
-                        <table id="food-search-table" class="table-sm table  table-hover text-center table-responsive-sm">
+                        <table id="food-search-table"
+                            class="table-sm table  table-hover text-center table-responsive-sm">
                             <thead class="bg-primary text-white">
                                 <tr>
                                     <th>#</th>
@@ -512,23 +527,34 @@
 
             </div>
         </div>
-        <script src="https://code.jquery.com/jquery-3.4.1.min.js" integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="anonymous"></script>
-        <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
-        <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
+        <script src="https://code.jquery.com/jquery-3.4.1.min.js"
+            integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="anonymous"></script>
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"
+            integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1"
+            crossorigin="anonymous"></script>
+        <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"
+            integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM"
+            crossorigin="anonymous"></script>
         <script src="../source/loggers.js"></script>
 </body>
 
 <script>
-    $(function() {
+    $(function () {
         // get data from server url: http://localhost:8000/food-log/2019-07-16
 
-        $.get("http://localhost:8000/exercise-log",(data)=>{
+        $.get("http://localhost:8000/exercise-log", (data) => {
+            let excersice_log = $('#exercise-log-body')
             console.log(data)
-            
+
+            for (log of data) {
+                excersice_log.append(`<tr><td>${log.Exercise}</td><td>${log.Time}</td><td class="text-center">${log.Calories_Burned}</td><td class="text-center"><p class="fa fa-trash-o pr-2"></p></td>
+                </tr>`)
+            }
+            console.log(data)
+
 
         })
     })
-
 
 
     $.get("http://localhost:8000/food-log/121", (data) => {
