--- a/Design/pages/exercise.html
+++ b/Design/pages/exercise.html
@@ -104,44 +104,28 @@
         </div>
         <div class="row pt-3 justify-content-md-center">
             <div class="col-md-4 mb-2">
-                <input type="date" class="form-control">
+                <input type="date" class="form-control" id="date-picker">
             </div>
             <div class="col-lg-12">
 
-                <table class="table">
+                <table class="table table-sm table-responsive-sm">
                     <thead class="labels text-white">
                         <tr>
                             <th>Exercise</th>
-                            <th>Duration (hrs)</th>
-                            <th>Calories Burned</th>
+                            <th>Time</th>
+                            <th class="text-center">Calories Burned</th>
+                            <th>Delete</th>
                         </tr>
                     </thead>
-                    <tbody>
-                        <tr>
-                            <th>Exercise 1</th>
-                            <td>6</td>
-                            <td>120</td>
-                        </tr>
-                        <tr>
-                            <th>Exercise 2</th>
-                            <td>4</td>
-                            <td>160</td>
-                        </tr>
-                        <tr>
-                            <th>Exercise 3</th>
-                            <td>7.5</td>
-                            <td>335</td>
-                        </tr>
-                        <tr>
-                            <th>Exercise 4</th>
-                            <td>1.5</td>
-                            <td>475</td>
-                        </tr>
+                    <tbody id='exercise-log-body'>
+                        
+
                     </tbody>
                 </table>
                 <div class="d-flex flex-row-reverse">
-                    <button class="btn btnn-primary text-white " data-toggle="modal" data-target="#log-exercise">Add
-                        Exercise</button>
+                    <button class="btn btnn-primary btn-sm btn-block text-white" value="LOG FOOD" data-toggle="modal"
+                        data-target="#log-exercise">Log Exercise</button>
+
                 </div>
 
             </div>
@@ -188,18 +172,8 @@
             </div>
 
     </footer>
-    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
-        integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
-        crossorigin="anonymous"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"
-        integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1"
-        crossorigin="anonymous"></script>
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"
-        integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM"
-        crossorigin="anonymous"></script>
 
-
-        <div class="modal fade" id="log-exercise" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel"
+    <div class="modal fade" id="log-exercise" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel"
         aria-hidden="true">
         <div class="modal-dialog" role="document">
             <div class="modal-content container-fluid">
@@ -308,6 +282,39 @@
             </div>
         </div>
     </div>
+    <script src="https://code.jquery.com/jquery-3.4.1.min.js"
+        integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"
+        integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1"
+        crossorigin="anonymous"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"
+        integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM"
+        crossorigin="anonymous"></script>
+    <script src="../source/loggers.js"></script>
+    <script src="../source/utils.js"></script>
+
 </body>
+<script>
+    $(function () {
+        // get today 
+        let datePicker = $("#date-picker")
+        let today = new Date(Date.now())
+        // formate date
+        today = getFormatedDate(today)
+
+        datePicker.val(today)
+
+        // get todays Exercise 
+        fetchExercise(today)
+
+        // register change event
+        datePicker.change(() => {
+            let today = new Date(datePicker.val())
+            today = getFormatedDate(today)
+            fetchExercise(today)
+        })
+    })
+
+</script>
 
 </html>
