added goals endpoints

--- a/Design/pages/Home.html
+++ b/Design/pages/Home.html
@@ -113,22 +113,33 @@
                             <tbody>
                                 <tr>
                                     <td>Calories Consumed</td>
-                                    <td id="cal-consumed"> 930 </td>
+                                    <td id="cal-consumed"></td>
                                 </tr>
                                 <tr>
                                     <td>Calories Burned</td>
-                                    <td id="cal-burned"> 225 </td>
+                                    <td id="cal-burned">  </td>
                                 </tr>
                                 <tr>
                                     <td>Net Calories</td>
-                                    <td id="net-cal"> 705</td>
+                                    <td id="net-cal"> </td>
                                 </tr>
                                 <tr>
                                     <td>Over</td>
-                                    <td id="cal-over">00 </td>
+                                    <td id="cal-over"> </td>
+                                </tr>
+                                <tr>
+                                    <td >Today's Weight</td>
+                                    <td id="today-weight"></td>
                                 </tr>
                             </tbody>
                         </table>
+                      
+                        <div class="form pt-4">
+                            <p id="weight-logger-err"></p>
+                            <input type="number" id="weight-logger-input" placeholder="weight in lbs" class="form-control mr-1 mt-1">
+                            <button id="weight-logger-btn" class="btn btnn-primary btn-block text-white mt-1">Log</button>
+                        </div>
+                       
                     </div>
                 </div>
             </div>
