--- a/Design/pages/profile.html
+++ b/Design/pages/profile.html
@@ -96,48 +96,43 @@
     </nav>
     <!--Navbar end-->
     <div class="container mb-3">
-        <form>
+        <form class="pt-4">
+            
             <div class="form-row">
-                <div class="form-group col-md-4  mt-5">
-                    <label for="exampleFormControlFile1">Profile Picture</label>
-                    <input type="file" class="form-control-file" id="exampleFormControlFile1">
-                </div>
-            </div>
-            <div class="form-row">
-                <div class="form-group  col-md-4  ">
+                <div class="form-group  col-md-6  ">
                     <label for="full-name">Full Name</label>
-                    <input required type="text" class="form-control" name="fullName" id="full-name" placeholder="Full Name" value="Atif Mehmood">
+                    <input required type="text" class="form-control" name="fullName" id="fullName" placeholder="Full Name" >
                 </div>
-                <div class="form-group  col-md-4  ">
+                <div class="form-group  col-md-6  ">
                     <label for="email">Email</label>
-                    <input required type="email" class="form-control" name="email" id="email" placeholder="Email" value="am02464@st.habib.edu.pk">
+                    <input required type="email" class="form-control" name="email" id="email" placeholder="Email" >
                 </div>
             </div>
             <div class="form-row">
                 <div class="col-12 ">
                     <label for="input" required>Height (Feet, Inch.)</label>
                 </div>
-                <div class="form-group col-md-4 ">
-                    <input required type="number" name="heightFeet" class="form-control w-100" id="input" required placeholder="feet" value="5">
+                <div class="form-group col-md-6 ">
+                    <input required type="number" name="heightFeet" id="heightFeet" class="form-control w-100" id="input" required placeholder="feet" >
                 </div>
-                <div class="form-group col-md-4 ">
-                    <input required type="number" name="heightInches" class="form-control" id="input" required placeholder="inches" value="4">
+                <div class="form-group col-md-6 ">
+                    <input required type="number" name="heightInches" id="heightInches" class="form-control" id="input" required placeholder="inches" >
                 </div>
 
             </div>
             <div class="form-row">
-                <div class="col-md-4">
+                <div class="col-md-6">
                     <label class="control-label" for="date">Date of Birth</label>
-                    <input required class="form-control" name="dateOfBirth" id="date" name="date" placeholder="MM/DD/YYY" type="date" />
+                    <input required class="form-control" name="dateOfBirth" id="dateOfBirth" name="date" placeholder="MM/DD/YYY" type="date" />
                 </div>
-                <div class="col-md-4 ">
-                    <label for="number">Weight</label>
-                    <input required type="number" class="form-control" name="wight" id="number" placeholder="lbs" value="110.231">
+                <div class="col-md-6 ">
+                    <label for="number">Weight (lbs)</label>
+                    <input required type="number" class="form-control" name="weight" id="weight" placeholder="lbs">
                 </div>
 
             </div>
             <div class="form-row pt-2">
-                <legend class="col-form-label col-md-4 pt-0">Gender
+                <legend class="col-form-label col-md-6 pt-0">Gender
                     <div class="col-sm-10">
                         <div class="form-check">
                             <input required class="form-check-input" required type="radio" name="gender" id="gender-male" value="option1" checked>
@@ -237,12 +232,24 @@
 
     </footer>
 
-    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
+    <script src="https://code.jquery.com/jquery-3.4.1.min.js"
+        integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"
+        integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1"
+        crossorigin="anonymous"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"
+        integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM"
+        crossorigin="anonymous"></script>
+    <script src="../source/utils.js"></script>
+    <script src="../source/loggers.js"></script>
     <script>
-        let profileForm = $('#user-profile-form')
-
+        $(()=>{
+            fetchUserProfile((data)=>{
+                for (el in data){
+                    $(`#${el}`).val(data[el])
+                }
+            })
+        })
     </script>
 </body>
 
